--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@
     <link href="//fonts.googleapis.com/" rel="dns-prefetch">
     <link href="//fonts.googleapis.com/css?family=Droid+Serif:400,700,400italic|Open+Sans:700,400&subset=latin,latin-ext" rel="stylesheet">
 
-    <link rel="stylesheet" href="//blog.chalda.cz/themes/ghostium/assets/css/main.min.css?v=1486902196698"/>
-    <link rel="stylesheet" href="//blog.chalda.cz/themes/ghostium/assets/css/custom.css?v=1486902196698"/>
-    <link rel="stylesheet" href="//blog.chalda.cz/themes/ghostium/assets/css/asciidoctor-foundation.css?v=1486902196698"/>
+    <link rel="stylesheet" href="//blog.chalda.cz/themes/ghostium/assets/css/main.min.css?v=1486902754618"/>
+    <link rel="stylesheet" href="//blog.chalda.cz/themes/ghostium/assets/css/custom.css?v=1486902754618"/>
+    <link rel="stylesheet" href="//blog.chalda.cz/themes/ghostium/assets/css/asciidoctor-foundation.css?v=1486902754618"/>
 
 
 
@@ -70,7 +70,7 @@
       GHOSTIUM.enablePjax = typeof enable_pjax !== 'undefined' ? enable_pjax : true;
     </script>
 
-    <script src="//blog.chalda.cz/themes/ghostium/assets/js/head-scripts.min.js?v=1486902196698"></script>
+    <script src="//blog.chalda.cz/themes/ghostium/assets/js/head-scripts.min.js?v=1486902754618"></script>
 
     <link rel="canonical" href="http://blog.chalda.cz/" />
     <meta name="referrer" content="origin" />
@@ -130,10 +130,10 @@ null
           <div data-pjax-container class="content">
             
 <aside role="banner" class="cover">
-  <div data-load-image="/img/cover.jpg" class="cover-image"></div>
+  <div data-load-image="/images/cover.jpg" class="cover-image"></div>
   <div class="cover-container">
       <a href="http://blog.chalda.cz" class="cover-logo" data-pjax>
-        <img src="/img/helmet.jpg" alt="Blog Logo">
+        <img src="/images/helmet.jpg" alt="Blog Logo">
       </a>
     <h1 class="cover-title"><a href="http://blog.chalda.cz" title="Chalda&#x27;s blog">Chalda&#x27;s blog</a></h1>
     <p class="cover-description">Notes for not being forgotten</p>
@@ -235,7 +235,7 @@ null
         hljs.initHighlightingOnLoad();
       </script>
 
-    <script src="//blog.chalda.cz/themes/ghostium/assets/js/foot-scripts.min.js?v=1486902196698"></script>
+    <script src="//blog.chalda.cz/themes/ghostium/assets/js/foot-scripts.min.js?v=1486902754618"></script>
 
     <script>
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
